--- a/src/test/Makefile.in
+++ b/src/test/Makefile.in
@@ -15,6 +15,8 @@ LIBDECODEQR_DIR=../libdecodeqr
 CXX=@CXX@
 CPPFLAGS=@CPPFLAGS@ @CXXFLAGS@ -c
 LDFLAGS=@LDFLAGS@
+INCLUDES = $(DEPS_CFLAGS)
+LIBS = $(DEPS_LIBS)
 
 VPATH=./:$(LIBDECODEQR_DIR)
 
