fix samples, build tests with make check

--- a/src/sample/simple/Makefile.am
+++ b/src/sample/simple/Makefile.am
@@ -1,3 +1,5 @@
+AM_CPPFLAGS = $(DEPS_CFLAGS)
 noinst_PROGRAMS = simpletest
 simpletest_SOURCES = simpletest.cpp
-simpletest_LIBADD = libdecodeqr/libdecodeqr.la
+simpletest_LDADD = ../../libdecodeqr/libdecodeqr.la
+simpletest_LDADD += $(DEPS_LIBS)
