automatically build samples

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,2 @@
-SUBDIRS = libdecodeqr sample test
-#SUBDIRS = libdecodeqr $(SAMPLE)
+SUBDIRS = libdecodeqr test sample
 AM_CPPFLAGS = $(DEPS_CFLAGS)
