include extra filed in dist task

--- a/examples/webcam/Makefile.am
+++ b/examples/webcam/Makefile.am
@@ -1,4 +1,5 @@
 AM_CPPFLAGS = $(DEPS_CFLAGS)
+EXTRA_DIST = webcam.dep webcam.dsp webcam.dsw webcam.mak
 noinst_PROGRAMS = webcam
 webcam_SOURCES = webcam.cpp
 webcam_LDADD = ../../libdecodeqr/libdecodeqr.la
