--- a/examples/simple/Makefile.am
+++ b/examples/simple/Makefile.am
@@ -1,4 +1,5 @@
 AM_CPPFLAGS = $(DEPS_CFLAGS)
+EXTRA_DIST = simple.dep simple.dsp simple.dsw simple.mak
 noinst_PROGRAMS = simpletest
 simpletest_SOURCES = simpletest.cpp
 simpletest_LDADD = ../../libdecodeqr/libdecodeqr.la
