--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,9 @@ AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AC_CONFIG_SRCDIR([libdecodeqr/bitstream.cpp])
 
+# Fix for recent changes in automake
+m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
+
 # Checks for programs.
 AC_LANG([C++])
 AC_PROG_CXX
